Added super menu and made Feast of Odin Submenus

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,28 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.njewe.scythescorecalculator">
+    package="GameScoreCalculator">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Game Score Calculator"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="MainMenu">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:name=".DisplayActivityMessage"
-            android:label="@string/title_activity_display_message"
-            android:configChanges="orientation|keyboardHidden"
-            android:parentActivityName=".MainActivity">
+            android:name="ScytheScoreCalculator.ScytheMainMenu"
+            android:parentActivityName="GameScoreCalculator.MainMenu">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value="GameScoreCalculator.MainMenu" />
+        </activity>
+
+        <activity
+            android:name="FeastOfOdinScoreCalculator.FeastOfOdinMainMenu"
+            android:parentActivityName="GameScoreCalculator.MainMenu">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="GameScoreCalculator.MainMenu" />
+        </activity>
+
+        <activity
+            android:name="ScytheScoreCalculator.DisplayActivityMessage"
+            android:label="@string/title_activity_display_message"
+            android:configChanges="orientation|keyboardHidden"
+            android:parentActivityName="ScytheScoreCalculator.ScytheMainMenu">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="ScytheScoreCalculator.ScytheMainMenu" />
         </activity>
     </application>
 
